<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
      android:text="@string/button0" android:id="@+id/btn0" />
    <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"
      android:id="@+id/pic0" />
      
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
      android:text="@string/button1" android:id="@+id/btn1" />  
    <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"
      android:id="@+id/pic1" />      
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
      android:id="@+id/text0" />
      <Button android:id="@+id/next" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/next" />
      </LinearLayout>
</ScrollView>
